# gtktweeter

./: COPYING  ChangeLog  Makefile.am  Makefile.m32  Makefile.w32  README  README_FIRST  TODO  config.h.in  configure.in  gtktweeter.c  gtktweeter.rc  gtktweeter.spec.in
po/: Makefile  Makefile.w32  gtktweeter.pot  ja.po
